...
    SettingsLinkSection(
        content = SettingsLinkContent(
            sectionTitle = stringResource(R.string.app_schedules),
            title = stringResource(R.string.plan_visible_apps),
            summary = stringResource(R.string.plan_visible_apps_summary),
            icon = Icons.Outlined.Schedule,
            testTag = "open_schedules_button",
        ),
        onClick = onOpenSchedules,
    )
}

@Composable
...
    SettingsLinkSection(
        content = SettingsLinkContent(
            sectionTitle = stringResource(R.string.help),
            title = stringResource(R.string.show_navigation_tutorial),
            summary = stringResource(R.string.show_navigation_tutorial_summary),
            icon = Icons.Outlined.TouchApp,
            testTag = "show_navigation_tutorial_button",
        ),
        onClick = onShowNavigationTutorial,
    )
}

@Composable
...
